Starting to work on exposition for sequential design paper.

--- a/local-defs.tex
+++ b/local-defs.tex
@@ -11,6 +11,7 @@
 \newcommand*{\abs}[1]{\left\lvert#1\right\rvert}
 \newcommand{\R}{\mathbb{R}}
 \newcommand*{\suchthat}{\,\mathrel{\big|}\,}
+\newcommand{\Exp}[1]{\exp\mathopen{}\left\{#1\right\}\mathclose{}}
 
 \DeclareMathOperator*{\argmax}{argmax}
 \DeclareMathOperator*{\argmin}{argmin}
